tests/examples/snapshots/fail/sorts/imm_vs_mut.fly.cvc4.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sorts/imm_vs_mut.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: could not unify s and bool


