tests/examples/snapshots/fail/sorts/redeclared_sort.fly.z3.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sorts/redeclared_sort.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: sort s was declared multiple times


