tests/examples/snapshots/fail/sorts/sort_inference_basic.fly.cvc4.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sorts/sort_inference_basic.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
UnknownSort("")

